# fsnotify-reproducer

./: README.md  fsnotify-reproducer.cabal
src/: Main.hs
