cabal-version:      3.0
name:               fsnotify-reproducer
version:            0.1.0.0
homepage:           https://github.com/githubuser/fsnotify-reproducer#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
category:           Web
build-type:         Simple
extra-source-files: README.md

executable fsnotify-reproducer
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    , base       >=4.7 && <5
    , directory
    , fsnotify
    , random
